--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <h1>RDS の値を表示</h1>
-    <div id="rdsValue"></div>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <html>
+    <body>
+      <h1>RDS の値を表示</h1>
+      <div id="rdsValue"></div>
 
-    <script>
-      async function fetchValue() {
-        const res = await fetch(
-          "https://your-api-endpoint.amazonaws.com/prod/value"
-        );
-        const data = await res.json();
-        document.getElementById("rdsValue").innerText = data.value;
-      }
-      fetchValue();
-    </script>
-  </body>
+      <script>
+        async function fetchValue() {
+          const res = await fetch(
+            "https://your-api-endpoint.amazonaws.com/prod/value"
+          );
+          const data = await res.json();
+          document.getElementById("rdsValue").innerText = data.value;
+        }
+        fetchValue();
+      </script>
+    </body>
+  </html>
 </html>
